# PyDepM

./: .env  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  EXAMPLES.md  INDEX.md  LOCK_FILE_FORMAT.md
src/pydepm/: __init__.py
src/pydepm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pydepm/cli/: __init__.py  main.py
src/pydepm/core/: __init__.py  build.py  deps.py  envs.py  integration.py  proc.py  resolver.py
