[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydepm"
version = "1.0.0"
description = "Modern Python dependency and project manager with custom resolver, lock files, and comprehensive tooling (pydep CLI)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "ZMDev", email = "ztadevs@gmail.com" },
]
maintainers = [
  { name = "ZMDev", email = "ztadevs@gmail.com" },
]
keywords = ["dependencies", "packaging", "cli", "pyinstaller", "poetry", "pypi", "resolver", "lock-files"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Software Distribution",
]

dependencies = [
  "typer==0.24.1",
  "build==1.4.2",
  "packaging==26.0",
  "requests==2.33.1",
  "tomlkit==0.14.0",
  "questionary==2.1.1",
  "rich==14.3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black==26.3.1",
  "ruff==0.15.9",
  "mypy==1.20.0",
  "isort==8.0.1",
]

test = [
  "pytest==9.0.2",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
  "pytest-asyncio==1.4.0a0",
]

docs = [
  "sphinx==9.1.0",
  "sphinx-rtd-theme==3.1.0",
  "myst-parser==5.0.0",
]

[project.scripts]
pydep = "pydepm.cli.main:app"

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

# PyDepm-specific configuration
[tool.pydepm]
type = "module"
python-version = "3.14"
min-version = "1.0.0"

[tool.pydepm.env]
type = "venv"

[tool.pydepm.publishing]
repository = "testpypi"

[tool.pydepm.resolver]
allow-prerelease = false
allow-yanked = false
prefer-compatible = true
pypi-timeout = 10
max-depth = 50

[tool.pydepm.scripts]
test = "pytest tests/ -v --cov=src --cov-report=html"
test-watch = "pytest-watch tests/"
format = "black . && isort . && ruff check --fix ."
lint = "ruff check . && black --check ."
type-check = "mypy src/"
dev = "pytest-watch tests/"
docs = "sphinx-build -b html docs/ docs/_build/"

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --strict-markers --cov=src --cov-report=term-missing"
python_files = ["test_*.py"]
filterwarnings = ["error"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
py_version = 311
src_paths = ["src", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "A"]
ignore = ["E501"]  # Line length handled by line-length setting
exclude = [".git", ".venv", "build", "dist", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
